--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI =mongodb+srv://swapnil:swapnil123@cluster0.x30bd.mongodb.net/taskmanager?retryWrites=true&w=majority
+MONGO_URI =mongodb+srv://sopol:123@cluster0.6ksbyf2.mongodb.net/taskmanager?retryWrites=true&w=majority
